[package]
name = "expression_format"
version = "1.1.3"
authors = ["Sebastian Ortmann <ortmann.sebastian@gmail.com>"]
edition = "2018"
description = "A crate to format Rust expressions in a string, similar to f-string formatting in Python"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/sortmann/expression_format"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expression_format_impl = "1.1.1"
